cmake_minimum_required(VERSION 3.10)

project(Developers)

add_subdirectory(BurgersEquation)
add_subdirectory(1DWaveAbsorbingBC)
add_subdirectory(CLEmpiricFlux)
add_subdirectory(DebuggingFEM)
add_subdirectory(DiscontinuousGalerkin1D)
add_subdirectory(ElementMatrixComputation)
add_subdirectory(EngquistOsherNumericalFlux)
add_subdirectory(ErrorEstimatesForTraces)
add_subdirectory(FiniteVolumeSineConsLaw)
add_subdirectory(HandlingDOFs)
#add_subdirectory(LaxWendroffScheme)
add_subdirectory(LengthOfBoundary)
add_subdirectory(LinFeReactDiff)
add_subdirectory(LinearFE1D)
add_subdirectory(MaximumPrinciple)
add_subdirectory(NonConformingCrouzeixRaviartFiniteElements)
add_subdirectory(OutputImpedanceBVP)
add_subdirectory(RegularizedNeumann)
add_subdirectory(SimpleLinearFiniteElements)
add_subdirectory(TestQuadratureRules)
add_subdirectory(TransformationOfGalerkinMatrices)
