cmake_minimum_required(VERSION 3.10)

project(developers)

# Add custom targets
include("../cmake/modules/custom_targets.cmake")
get_custom_test_targets()

add_subdirectory(1DWaveAbsorbingBC)
add_subdirectory(AdvectionFV2D) # under construction
add_subdirectory(AvgValBoundary)
add_subdirectory(BoundaryWave)
add_subdirectory(BurgersEquation)
add_subdirectory(CLEmpiricFlux)
add_subdirectory(ConsLawWithSource)
add_subdirectory(ContourPlot)
add_subdirectory(ConvBLFMatrixProvider)
add_subdirectory(CoupledSecondOrderBVP)
add_subdirectory(CrossProd)
add_subdirectory(DebuggingFEM)
add_subdirectory(DebuggingWithGDB)
add_subdirectory(DiscontinuousGalerkin1D)
add_subdirectory(ElectrostaticForce)
add_subdirectory(ElementMatrixComputation)
add_subdirectory(EngquistOsherNumericalFlux)
add_subdirectory(ErrorEstimatesForTraces)
add_subdirectory(ExpFittedUpwind)
add_subdirectory(ExponentialIntegrator)
add_subdirectory(ExtendedMUSCL)
add_subdirectory(FiniteVolumeRobin)
add_subdirectory(FiniteVolumeSineConsLaw)
# add_subdirectory(FisherKPP) # missing unit tests
add_subdirectory(FluxLimitedFV)
add_subdirectory(GaussLobattoParabolic)
add_subdirectory(GradientFlow)
add_subdirectory(HierarchicalErrorEstimator)
add_subdirectory(ImplRK3Prey)
add_subdirectory(IncidenceMatrices)
add_subdirectory(InitCondLV)
add_subdirectory(IPDGFEM)
# add_subdirectory(LaxWendroffScheme) # test_mastersolution takes too long
add_subdirectory(LengthOfBoundary)
add_subdirectory(LFPPDofHandling)
add_subdirectory(LinearFE1D)
add_subdirectory(LinFeReactDiff)
add_subdirectory(MatODE)
add_subdirectory(MaximumPrinciple)
add_subdirectory(Mehrstellenverfahren)
add_subdirectory(MIRK)
add_subdirectory(MixedFEMWave)
add_subdirectory(NitscheMethod)
add_subdirectory(NLMatODE)
add_subdirectory(NonConformingCrouzeixRaviartFiniteElements)
add_subdirectory(NonLinSchroedingerEquation)
add_subdirectory(NumPDESetup)
add_subdirectory(ODESolve)
add_subdirectory(OrdNotAll)
add_subdirectory(OutputImpedanceBVP)
add_subdirectory(ParametricElementMatrices)
add_subdirectory(ParametricFiniteElements)
add_subdirectory(PointEvaluationRhs)
add_subdirectory(ProjectionOntoGradients)
add_subdirectory(QuasiInterpolation)
add_subdirectory(RadauThreeTimestepping)
add_subdirectory(RegularizedNeumannProblem)
add_subdirectory(ResidualErrorEstimator)
add_subdirectory(RK3Prey)
add_subdirectory(SDIRK)
add_subdirectory(SDIRKMethodOfLines)
add_subdirectory(SemiLagrangian)
add_subdirectory(SemImpRK)
add_subdirectory(SimpleLinearFiniteElements)
add_subdirectory(SobolevEvolutionProblem)
add_subdirectory(StableEvaluationAtAPoint) # needs checking by Ralf
add_subdirectory(StabRK3)
add_subdirectory(StationaryCurrents)
add_subdirectory(SymplecticTimestepping)
add_subdirectory(SymplecticTimesteppingWaves)
add_subdirectory(SystemODE)
add_subdirectory(TaylorODE)
add_subdirectory(TestQuadratureRules)
add_subdirectory(TransformationOfGalerkinMatrices)
add_subdirectory(TransformedConsLaw)
add_subdirectory(TranspSemiLagr)
add_subdirectory(UnstableBVP)
add_subdirectory(UpwindFiniteVolume) # Under construction
add_subdirectory(UpwindQuadrature)
add_subdirectory(WaveABC2D)
add_subdirectory(ZienkiewiczZhuEstimator)
add_subdirectory(AdvectionSUPG)
add_subdirectory(PML1D)
add_subdirectory(PotentialFlow)
add_subdirectory(MinimalGraphSurface)
add_subdirectory(Brachistochrone)
