cmake_minimum_required(VERSION 3.10)

project(homeworks)

add_subdirectory(1DWaveAbsorbingBC)
add_subdirectory(AvgValBoundary)
add_subdirectory(BoundaryWave)
add_subdirectory(BurgersEquation)
add_subdirectory(CLEmpiricFlux)
add_subdirectory(CoupledSecondOrderBVP)
add_subdirectory(DebuggingFEM)
add_subdirectory(DiscontinuousGalerkin1D)
add_subdirectory(ElementMatrixComputation)
add_subdirectory(EngquistOsherNumericalFlux)
add_subdirectory(ErrorEstimatesForTraces)
add_subdirectory(FiniteVolumeSineConsLaw)
add_subdirectory(HandlingDOFs)
add_subdirectory(IPDGFEM)
add_subdirectory(IncidenceMatrices)
#add_subdirectory(LaxWendroffScheme) # test_mastersolution takes too long
add_subdirectory(LengthOfBoundary)
add_subdirectory(LinFeReactDiff)
add_subdirectory(LinearFE1D)
add_subdirectory(MaximumPrinciple)
add_subdirectory(NonConformingCrouzeixRaviartFiniteElements)
# add_subdirectory(OutputImpedanceBVP) # test_mysolution has infinite loop
add_subdirectory(ParametricElementMatrices)
# add_subdirectory(PointEvaluationRhs) # unit tests don't compile
add_subdirectory(RadauThreeTimestepping)
add_subdirectory(RegularizedNeumann)
add_subdirectory(SDIRKMethodOfLines)
add_subdirectory(SimpleLinearFiniteElements)
add_subdirectory(SymplecticTimesteppingWaves)
add_subdirectory(TestQuadratureRules)
add_subdirectory(TransformationOfGalerkinMatrices)
add_subdirectory(UnstableBVP)
