# Add custom targets
include("../cmake/modules/custom_targets.cmake")
get_custom_test_targets()

add_subdirectory(1DWaveAbsorbingBC)
add_subdirectory(AvgValBoundary)
add_subdirectory(BoundaryWave)
add_subdirectory(BurgersEquation)
add_subdirectory(CLEmpiricFlux)
add_subdirectory(CoupledSecondOrderBVP)
add_subdirectory(DebuggingFEM)
add_subdirectory(DiscontinuousGalerkin1D)
add_subdirectory(ElectrostaticForce)
add_subdirectory(ElementMatrixComputation)
add_subdirectory(EngquistOsherNumericalFlux)
add_subdirectory(ErrorEstimatesForTraces)
add_subdirectory(FiniteVolumeRobin)
add_subdirectory(FiniteVolumeSineConsLaw)
add_subdirectory(HandlingDOFs)
add_subdirectory(IPDGFEM)
add_subdirectory(IncidenceMatrices)
# add_subdirectory(LaxWendroffScheme) # test_mastersolution takes too long
add_subdirectory(LengthOfBoundary)
add_subdirectory(LinFeReactDiff)
add_subdirectory(LinearFE1D)
add_subdirectory(MaximumPrinciple)
add_subdirectory(NonConformingCrouzeixRaviartFiniteElements)
add_subdirectory(OutputImpedanceBVP)
add_subdirectory(ParametricElementMatrices)
add_subdirectory(PointEvaluationRhs)
add_subdirectory(ProjectionOntoGradients) # under construction
add_subdirectory(RadauThreeTimestepping)
add_subdirectory(RegularizedNeumann)
add_subdirectory(SDIRKMethodOfLines)
add_subdirectory(SimpleLinearFiniteElements)
add_subdirectory(SymplecticTimesteppingWaves)
add_subdirectory(TestQuadratureRules)
add_subdirectory(TransformationOfGalerkinMatrices)
add_subdirectory(UnstableBVP)
